# toy_nn

./: Cargo.toml  README.md
python_test/: main.py
src/: activation.rs  dense.rs  example.rs  lib.rs  loss.rs  main.rs  sequential.rs
