[package]
name = "toy_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas-src = { version = "0.9.0", features=["openblas"] }
ndarray = { version = "0.15.6", features=["blas"] }
ndarray-rand = "0.14.0"
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
plotly = { version="0.8.4", features = ["plotly_ndarray"] }
